added threshold alert

--- a/src/styles/WeatherDashboard.module.scss
+++ b/src/styles/WeatherDashboard.module.scss
@@ -41,7 +41,7 @@
     }
   }
   
-  .select, .dateInput {
+  .select, .dateInput, .input {
     width: 100%;
     padding: 10px;
     border: 1px solid #bdc3c7;
